Closed
Bug 1315889
Opened 9 years ago
Closed 9 years ago
stylo: don't try to restyle elements that have been removed from the document
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla52
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | fixed |
People
(Reporter: heycam, Assigned: heycam)
References
Details
Attachments
(1 file)
|
2.50 KB,
patch
|
emilio
:
review+
|
Details | Diff | Splinter Review |
Under ProcessPendingRestyles, if we find an element in our mModifiedElements table that has since been removed from the document, we trigger some assertions.
| Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8808519 -
Flags: review?(ecoal95)
Updated•9 years ago
|
Attachment #8808519 -
Flags: review?(ecoal95) → review+
Comment 2•9 years ago
|
||
Note that I have an in-flight patch that rewrites all of this (and moves us to the Taipei model). Feel free to land any changes you want in the mean time, just don't spend a ton of time on them. :-)
| Assignee | ||
Comment 3•9 years ago
|
||
OK, good to know. This is blocking the current m-c merge so I will land it.
Pushed by cmccormack@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/25f6a27f309d
stylo: don't try to restyle elements that have been removed from the document. r=emilio
Comment 5•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•