Bug 1315889 - stylo: don't try to restyle elements that have been removed from the document. r=emilio

MozReview-Commit-ID: EiFS1KAKAj6